--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -17,18 +18,20 @@
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
-                        <input type="email" name="usu" id="ilogin" required placeholder=" Seu e-mail">
-                        <label for="ilogin">E-mail:</label>
+                        <span class="material-symbols-outlined">person</span>
+                        <input type="email" name="usu" id="ilogin" required maxlength="30" placeholder=" Seu e-mail" autocomplete="email">
+                        <label for="ilogin">Login</label>
                     </div>
                     <div class="campo">
+                        <span class="material-symbols-outlined">vpn_key</span>
                         <input type="password" name="sen" id="isen" required minlength="8" maxlength="20" placeholder=" Sua senha" autocomplete="current-password">
-                        <label for="isen">Senha:</label>
-                        <!--CONTINUA A PARTIR DE ADICIONAR O ICONE NO E-MAIL
-                        MINUTO DO VIDEO 6:24-->
+                        <label for="isen">Senha</label>
                     </div>
                     <p>
                         <input type="submit" value="Enviar">
-                        <input type="reset" value="Limpar">
+                        <a href="esqueci.html">
+                            Esqueci a senha <span class="material-symbols-outlined">Email</span>
+                        </a>
                     </p>
                 </form>
             </div>
