formatacao do formulario

--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@
                         <input type="password" name="sen" id="isen" required minlength="8" maxlength="20" placeholder=" Sua senha" autocomplete="current-password">
                         <label for="isen">Senha</label>
                     </div>
-                    <p>
-                        <input type="submit" value="Enviar">
-                        <a href="esqueci.html">
-                            Esqueci a senha <span class="material-symbols-outlined">Email</span>
-                        </a>
-                    </p>
+                    <input type="submit" value="Enviar">
+                    <a href="esqueci.html" class="botao">
+                        Esqueci a senha <span class="material-symbols-outlined">Email</span>
+                    </a>
                 </form>
             </div>
         </section>
